# baird

./: .coveragerc  .gitignore  LICENSE  Makefile  Pipfile  README.md  README.rst  pyproject.toml  setup.py
baird/: __main__.py  cli.py  connections.py  ssh_cmd.py  tmux_session.py  tmux_session_handler.py  version.py
src/baird/: cli.py  connections.py  main.py  ssh_cmd.py  tmux_session.py  tmux_window.py
tests/: test_cli.py  test_ssh_cmd.py
tests/mock_project_dir/: pyproject.toml
tests/mocks/: mock_cli.py
